[gd_scene load_steps=5 format=3 uid="uid://ghe0gdhks4he"]

[ext_resource type="Script" path="res://scripts/Enemies/living_plant.gd" id="1_36ur6"]
[ext_resource type="Texture2D" uid="uid://bcna4vxuhb6gr" path="res://assets/enemies/Living_Plant.png" id="1_cnbx8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_21h3r"]
size = Vector2(9, 8.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_psuvb"]
size = Vector2(20, 14)

[node name="LivingPlant" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 12
script = ExtResource("1_36ur6")

[node name="Plant" type="Sprite2D" parent="."]
position = Vector2(-3, 1)
texture = ExtResource("1_cnbx8")

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(-3.5, 0.125)
shape = SubResource("RectangleShape2D_21h3r")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(-4, 1)
shape = SubResource("RectangleShape2D_psuvb")
debug_color = Color(0.982167, 0, 0.364616, 0.42)

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
